virtualserver/4_cafe-app/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: cafe
spec:
  ingressClassName: "nginx"
  # ingressClassName: nginx # use only with k8s version >= 1.18.0
  #tls:
  #- hosts:
  #  - cafe.dfslab.local
  #  secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
